--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
+      <!-- <th>Password</th> -->
       <th>Full name</th>
       <th>Location</th>
       <th>Bio</th>
@@ -18,7 +18,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
+        <!--<td><%= user.password %></td> -->
         <td><%= user.full_name %></td>
         <td><%= user.location %></td>
         <td><%= user.bio %></td>
