edit routes and add Home index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,4 +32,7 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path %> |
+<%= link_to 'Home', root_path %>
+
+
