--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,19 +13,26 @@
 -->
 
 <p>
-  <strong>Full name:</strong>
-  <%= @user.full_name %>
+  <h2><strong>Full name:</strong>
+  <%= @user.full_name %></h2>
 </p>
 
-<p>
-  <strong>Location:</strong>
-  <%= @user.location %>
-</p>
+<ul>
+  <li>
+    <p>
+      <strong>Location:</strong>
+      <%= @user.location %>
+    </p>
+  </li>
 
-<p>
-  <strong>Bio:</strong>
-  <%= @user.bio %>
-</p>
+  <li>
+    <p>
+      <strong>Bio:</strong>
+      <%= @user.bio %>
+    </p>
+  </li>
+<ul>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path %> 
+
