--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Colchonet</title>
+    <title>ColchoNet</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <link href='http://fonts.googleapis.com/css?family=Pacifico'
+            rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 
+                            'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
+</head>
+<body>
+  <header>
+    <div id="header-wrap">
+      <h1><%= link_to "cocho.net", root_path %></h1>
+      <nav>
+        <ul>
+          <li><%= link_to "Rooms", rooms_path %></li>
+          <li><%= link_to "Login", new_user_path %></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div id="content">
+    <% if notice.present? %>
+      <p id="notice"><%= notice %></p>
+    <%end %>
+    <% if alert.present? %>
+      <p id="alert"><%= notice %></p>
+    <%end%>
+    
     <%= yield %>
-  </body>
+  </div>    
+</body>
 </html>
